--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.7",
+    "@sanity/client": "^6.4.9",
+    "@sanity/icons": "^2.4.1",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -16,9 +20,14 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-sanity": "^5.4.6",
+    "next-sanity-image": "^6.1.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "sanity": "^3.16.2",
+    "sanity-plugin-icon-picker": "^3.2.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
